# blt-contracts

./: .gitignore  README.md  flow.json
.circleci/: config.yml
contracts/ethereum/: .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/solana/teleport/program/: Cargo.toml
contracts/solana/teleport/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
contracts/solana/teleport/program/tests/: tests.rs
scripts/dao/: getStakedBLT.cdc
scripts/general/: README.md  getTimestamp.cdc
scripts/mining/: getCapMultiplier.cdc  getCriterias.cdc  getCurrentRound.cdc  getCurrentTotalReward.cdc  getMiningReward.cdc  getMiningState.cdc  getRewardCap.cdc  getRewardLockPeriod.cdc  getRewardLockRatio.cdc  getRewardsDistributed.cdc  getUnlockMiningReward.cdc  getUserRewards.cdc  getUserRewardsCollected.cdc  logBloctoTokenMining.cdc
scripts/sale/: README.md  getBLTVaultBalance.cdc  getLockupSchedule.cdc  getPurchaseInfo.cdc  getPurchasers.cdc  gettUSDTVaultBalance.cdc
scripts/staking/: README.md  getEpoch.cdc  getEpochTokenPayout.cdc  getStakingInfo.cdc  getStakingRecord.cdc
scripts/teleport/: README.md  getLockVaultBalance.cdc  getTeleportLengths.cdc
scripts/token/: README.md  checkFlowVault.cdc  getBloctoPassIds.cdc  getBloctoPassLockupAmount.cdc  (+9 more)
tests/: BloctoPass_test.cdc  BloctoToken_test.cdc  CustodyBloctoTokenAptos_test.cdc  CustodyBloctoTokenBSC_test.cdc  CustodyBloctoTokenEthereum_test.cdc  CustodyBloctoTokenSolana_test.cdc  CustodyBloctoToken_test.cdc  TeleportedTetherToken_test.cdc
(+251 files in other folders)
