[package]
authors = ["yihau <yihau@portto.io>"]
edition = "2018"
name = "blt_teleport"
version = "0.1.0"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.8.2"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.7"
thiserror = "1.0"
uint = "0.8"

[dev-dependencies]
solana-program-test = "1.6.7"
solana-sdk = "1.6.7"

[lib]
crate-type = ["cdylib", "lib"]
