[package]
authors = ["yihau <yihau@portto.io>"]
edition = "2018"
name = "blt_teleport"
version = "0.1.0"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.11"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0"
uint = "0.8"

[dev-dependencies]
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
